bare bones logging

--- a/paracletus.cabal
+++ b/paracletus.cabal
@@ -15,6 +15,24 @@ executable paracletus
     main-is: Main.hs
     hs-source-dirs: src
     other-modules: UPrelude
+                   Data
+                   Luau
+                   Prog
+                   Sign
+                   Vulk
+                   Luau.Command
+                   Luau.Data
+                   Luau.Util
+                   Prog.Data
+                   Prog.Init
+                   Prog.Util
+                   Sign.Data
+                   Sign.Except
+                   Sign.Queue
+                   Sign.Thread
+                   Sign.Util
+                   Sign.Var
+                   Vulk.GLFW
     default-language: Haskell2010
     build-depends: base
                  , base-unicode-symbols
