--- a/hie.yaml
+++ b/hie.yaml
@@ -39,6 +39,9 @@ cradle:
     - path: "src/Luau/Data.hs"
       component: "paracletus:exe:paracletus"
 
+    - path: "src/Luau/Shell.hs"
+      component: "paracletus:exe:paracletus"
+
     - path: "src/Luau/Util.hs"
       component: "paracletus:exe:paracletus"
 
