--- a/paracletus.cabal
+++ b/paracletus.cabal
@@ -26,6 +26,7 @@ executable paracletus
                    Load.Util
                    Luau.Command
                    Luau.Data
+                   Luau.Shell
                    Luau.Util
                    Prog.Buff
                    Prog.Data
