--- a/paracletus.cabal
+++ b/paracletus.cabal
@@ -34,6 +34,7 @@ executable paracletus
                    Prog.Foreign
                    Prog.Init
                    Prog.Input
+                   Prog.Mouse
                    Prog.Util
                    Sign.Data
                    Sign.Except
